fixed logo display on small screens

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -8,20 +8,44 @@ body {
   font-family: $default-font;
 }
 
-.navbar-brand .site-name {
-  font-family: 'Modak', cursive;
-  font-size: 3em;
-  margin-top: 0.2em;
+.navbar-brand {
+  .site-name {
+    font-family: 'Modak', cursive;
+    font-size: 3em;
+    margin: .3em;
+  }
+
+  img {
+    height: 60px;
+  }
+}
+
+#navbar-search {
+  padding-left: 1em;
+
+  .input-group {
+    input {
+      background-color: $white;
+      color: $black;
+    }
+
+    input::placeholder {
+      color: $navbar-default-link-color;
+    }
+  }
+}
+
+.navbar .btn-signup,
+.navbar .btn-signin {
+  background-color: $green;
+  color: $white;
+  margin: 3px;
 }
 
 .homepage-blurb .site-name {
   font-size: 5em;
 }
 
-.navbar-nav .btn {
-  background-color: $green;
-  color: $white;
-}
 
 .ellipsis {
   overflow: hidden;
@@ -58,22 +82,11 @@ h3 {
   font-size: 120%;
 }
 
-#navbar-search {
-  .input-group {
-    input {
-      background-color: $white;
-      color: $black;
-    }
-
-    input::placeholder {
-      color: $navbar-default-link-color;
-    }
-  }
-}
 
 section {
   margin: .5em 0 0;
   padding: 0 0 1em;
+
   h2 {
     background-color: $green;
     box-shadow: 1px 1px 1px 1px darken($beige, 20%);
@@ -112,8 +125,10 @@ section {
       border-top-right-radius: 5%;
     }
   }
+
   .card-finished {
     background: darken($beige, 10%);
+
     a {
       color: $brown;
     }
@@ -168,6 +183,7 @@ section {
 
   .thumbnail {
     height: 100px;
+
     img {
       border-radius: 5px;
       height: 75px;
@@ -211,6 +227,7 @@ ul.associations {
 
 // footer
 footer {
+
   #footer1,
   #footer2,
   #footer3 {
@@ -244,7 +261,9 @@ footer {
 #maincontainer {
   max-width: 2500px;
   min-height: 80%;
-  padding: 1em;
+  padding-bottom: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 // Autosuggest
@@ -282,7 +301,7 @@ $state-success-bg: lighten($green, 50%);
 
 label.required:after {
   color: red;
-  content:" *";
+  content: " *";
 }
 
 .truncate {
@@ -395,92 +414,4 @@ ul.thumbnail-buttons {
 
 .progress-fade:hover::before {
   background: none;
-}
-
-// Overrides applying only to mobile view. This must be at the end of the overrides file.
-// Extra small devices (portrait phones, less than 576px)
-@include media-breakpoint-down(xs) {
-  #maincontainer {
-    width: 100%;
-    padding: 10px;
-  }
-
-  h1 {
-    font-size: 200%;
-  }
-
-  h2 {
-    font-size: 130%;
-  }
-
-  h3 {
-    font-size: 120%;
-  }
-
-  .card-title {
-    margin-bottom: 0;
-  }
-
-  .sidebar {
-    margin-left: 0;
-    border-left: none;
-    padding-left: 0;
-  }
-
-  .map {
-    height: 300px;
-  }
-
-  .navbar .nav > li {
-    display: block;
-  }
-
-  .navbar .navbar-form {
-    padding-left: 0;
-    padding-right: 0;
-
-    .navbar-search {
-      width: auto;
-    }
-  }
-
-  .nav .btn {
-    background-color: $green;
-    width: 100%;
-  }
-
-  .navbar-brand .site-name {
-    font-size: 1.4em;
-    text-align: justify;
-  }
-
-  .navbar-brand .site-name:after {
-    content: "";
-    display: inline-block;
-    width: 100%;
-  }
-
-  section .btn {
-    width: 100%;
-  }
-
-  .index-cards {
-    .card {
-      margin: .2em;
-      width: 48%;
-
-      // Shrink title to fit more on page
-      .card-title {
-        font-size: 1em;
-      }
-
-      // Restrict height of image when on smaller screens
-      .img-card {
-        height: 100px;
-        object-fit: cover;
-        width: 100%;
-      }
-
-    }
-  }
 }
